--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 <body>
 3456
 <div class="numbers">
-    <input type="number">
-    <input type="number">
-    <input type="number">
-    <input type="number">
+    <input type="tel">
+    <input type="tel">
+    <input type="tel">
+    <input type="tel">
 </div>
 
 <script>
+    var inputElements = document.querySelectorAll('.numbers input');
     document.addEventListener('paste', function (event) {
         // 클립보드에서 데이터 가져오기
         var clipboardData = event.clipboardData || window.clipboardData;
@@ -25,7 +26,7 @@
         var numbersArray = pastedData.split("");
 
         // 각 input 요소에 값을 설정
-        var inputElements = document.querySelectorAll('.numbers input');
+        
         console.log(inputElements);
         for (var i = 0; i < Math.min(inputElements.length, numbersArray.length); i++) {
             console.log(numbersArray[i]);
