--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>클립보드 숫자 붙여넣기 예제</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="./favicon.ico" rel="shrtcut icon">
+    <title>Clipbard Paste Numbers</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 3456
