--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -9,9 +9,12 @@
     <title>Clipbard Paste Numbers</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-3456
+
 <div class="numbers">
+    <input type="tel">
+    <input type="tel">
     <input type="tel">
     <input type="tel">
     <input type="tel">
@@ -19,20 +22,18 @@
 </div>
 
 <script>
-    var inputElements = document.querySelectorAll('.numbers input');
+    const inputElements = document.querySelectorAll('.numbers input');
     document.addEventListener('paste', function (event) {
         // 클립보드에서 데이터 가져오기
-        var clipboardData = event.clipboardData || window.clipboardData;
-        var pastedData = clipboardData.getData('text');
+        const clipboardData = event.clipboardData || window.clipboardData;
+        const pastedData = clipboardData.getData('text');
         console.log(pastedData);
 
         // 띄어쓰기로 구분된 숫자 배열로 변환
-        var numbersArray = pastedData.split("");
+        const numbersArray = pastedData.replace(/ /g, '').split('');
 
         // 각 input 요소에 값을 설정
-        
-        console.log(inputElements);
-        for (var i = 0; i < Math.min(inputElements.length, numbersArray.length); i++) {
+        for (let i = 0; i < Math.min(inputElements.length, numbersArray.length); i++) {
             console.log(numbersArray[i]);
             inputElements[i].value = numbersArray[i];
         }
@@ -43,4 +44,5 @@
 </script>
 
 </body>
+
 </html>
